# alanode

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ala.doxygen.in  alaio.version.in  package.cmake  testnet.template
CMakeModules/: AlaioCheckVersion.cmake  AlaioTester.cmake.in  AlaioTesterBuild.cmake.in  MASSigning.cmake  additionalPlugins.cmake  alaio-config.cmake.in  doxygen.cmake  leap-config.cmake.in
docs/: index.md
docs/00_install/: index.md
docs/01_alanode/: index.md
docs/01_nodeos/: index.md
docs/02_alacli/: 04_troubleshooting.md  05_FAQ.md  index.md
docs/02_cleos/: index.md
docs/03_kalad/: 10_usage.md  20_security.md  35_wallet-specification.md  40_troubleshooting.md  50_FAQ.md  index.md
docs/03_keosd/: index.md
libraries/: CMakeLists.txt
libraries/chain/: CMakeLists.txt  abi_serializer.cpp  alaio_contract.cpp  alaio_contract_abi.cpp  alaio_contract_abi_bin.cpp  apply_context.cpp  asset.cpp  authority.cpp  authorization_manager.cpp  block.cpp  block_header.cpp  block_header_state.cpp  block_log.cpp  block_state.cpp  chain_config.cpp  chain_id_type.cpp  controller.cpp  deep_mind.cpp  fork_database.cpp  genesis_intrinsics.cpp  genesis_state.cpp  genesis_state_root_key.cpp.in  merkle.cpp  name.cpp  platform_timer_accuracy.cpp  platform_timer_asio_fallback.cpp  platform_timer_macos.cpp  platform_timer_posix.cpp  producer_schedule.cpp  protocol_feature_activation.cpp  protocol_feature_manager.cpp  protocol_state_object.cpp  resource_limits.cpp  snapshot.cpp  thread_utils.cpp  trace.cpp  transaction.cpp  transaction_context.cpp  transaction_metadata.cpp  wasm_alaio_binary_ops.cpp  (+6 more)
libraries/chain/include/alaio/chain/: abi_def.hpp  abi_serializer.hpp  account_object.hpp  action.hpp  action_receipt.hpp  alaio_contract.hpp  apply_context.hpp  asset.hpp  authority.hpp  authority_checker.hpp  authorization_manager.hpp  block.hpp  block_header.hpp  block_header_state.hpp  block_log.hpp  block_state.hpp  block_summary_object.hpp  block_timestamp.hpp  chain_config.hpp  chain_config_helper.hpp  chain_id_type.hpp  chain_snapshot.hpp  code_object.hpp  config.hpp  contract_table_objects.hpp  contract_types.hpp  controller.hpp  database_header_object.hpp  database_utils.hpp  deep_mind.hpp  exceptions.hpp  fixed_bytes.hpp  fixed_key.hpp  fork_database.hpp  generated_transaction_object.hpp  genesis_intrinsics.hpp  genesis_state.hpp  global_property_object.hpp  incremental_merkle.hpp  kv_config.hpp  (+33 more)
libraries/chain/include/alaio/chain/webassembly/: ala-vm-oc.hpp  ala-vm.hpp  common.hpp  interface.hpp  preconditions.hpp  return_codes.hpp  runtime_interface.hpp
libraries/chain/include/alaio/chain/webassembly/ala-vm-oc/: ala-vm-oc.h  ala-vm-oc.hpp  code_cache.hpp  compile_monitor.hpp  compile_trampoline.hpp  config.hpp  executor.hpp  gs_seg_helpers.h  intrinsic.hpp  intrinsic_mapping.hpp  ipc_helpers.hpp  ipc_protocol.hpp  memory.hpp  stack.hpp
libraries/chain/webassembly/: action.cpp  authorization.cpp  cf_system.cpp  cf_transaction.cpp  compiler_builtins.cpp  console.cpp  context_free.cpp  crypto.cpp  database.cpp  memory.cpp  permission.cpp  privileged.cpp  producer.cpp  softfloat.cpp  system.cpp  transaction.cpp
libraries/chain/webassembly/runtimes/: ala-vm-oc.cpp  ala-vm.cpp
libraries/chain/webassembly/runtimes/ala-vm-oc/: About WAVM  LLVMEmitIR.cpp  LLVMJIT.cpp  LLVMJIT.h  code_cache.cpp  compile_monitor.cpp  compile_trampoline.cpp  executor.cpp  gs_seg_helpers.c  intrinsic.cpp  ipc_helpers.cpp  llvmWARshim.cpp  memory.cpp  stack.cpp  switch_stack_linux.s
libraries/testing/: CMakeLists.txt  contracts.cpp.in  contracts.hpp.in  tester.cpp  tester_network.cpp
libraries/testing/include/alaio/testing/: chainbase_fixture.hpp  snapshot_suites.hpp  tester.hpp  tester_network.hpp
plugins/: alaio-make_new_plugin.sh
programs/: CMakeLists.txt
programs/alaio-blocklog/: CMakeLists.txt  main.cpp
programs/alaio-launcher/: CMakeLists.txt  config.hpp.in  main.cpp
scripts/: CMakeLists.txt  alaio-tn_bounce.sh  alaio-tn_down.sh  alaio-tn_roll.sh  alaio-tn_up.sh  pinned_build.sh
tests/: CMakeLists.txt  alanode_chainbase_allocation_test.py  alanode_contrl_c_test.py  alanode_extra_packed_data_test.py  alanode_forked_chain_test.py  alanode_high_transaction_test.py  alanode_irreversible_mode_test.py  alanode_multiple_version_protocol_feature_test.py  alanode_producer_watermark_test.py  alanode_protocol_feature_test.py  alanode_read_terminate_at_block_test.py  alanode_retry_transaction_test.py  alanode_run_remote_test.py  alanode_run_test.py  alanode_short_fork_take_over_test.py  alanode_startup_catchup.py  alanode_under_min_avail_ram.py  alanode_voting_test.py  block_log.cpp  block_log_retain_blocks_test.py  block_log_util_test.py  chain_plugin_tests.cpp  cli_test.py  compute_transaction_test.py  db_modes_test.sh  distributed-transactions-remote-test.py  distributed-transactions-test.py  full-version-label.sh  get_account_test.py  get_producers_tests.cpp  get_table_seckey_tests.cpp  get_table_tests.cpp  http_plugin_test.py  impaired_network.py  kalad_auto_launch_test.py  large-lib-test.py  launcher_test.py  light_validation_sync_test.py  lossy_network.py  main.cpp  (+24 more)
unittests/: CMakeLists.txt  abi_tests.cpp  alaio.token_tests.cpp  alaio_system_tester.hpp  api_tests.cpp  auth_tests.cpp  block_log_extract.cpp  block_tests.cpp  block_timestamp_tests.cpp  bootseq_tests.cpp  chain_tests.cpp  crypto_primitives_tests.cpp  currency_tests.cpp  database_tests.cpp  deep_mind_tests.cpp  delay_tests.cpp  fork_test_utilities.hpp  forked_tests.cpp  gen_protocol_feature_digest_tests.py  get_block_num_tests.cpp  main.cpp  misc_tests.cpp  params_tests.cpp  payloadless_tests.cpp  plugin_tests.cpp  producer_schedule_tests.cpp  protocol_feature_tests.cpp  ram_tests.cpp  resource_limits_test.cpp  restart_chain_tests.cpp  snapshot_tests.cpp  snapshots.hpp.in  special_accounts_tests.cpp  state_history_tests.cpp  test_cfd_transaction.cpp  test_cfd_transaction.hpp  unapplied_transaction_queue_tests.cpp  wasm_config_tests.cpp  wasm_tests.cpp  whitelist_blacklist_tests.cpp
(+470 files in other folders)
